# go-vcd-parser

./: .bazelrc  .editorconfig  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  macros.bzl
.github/workflows/: test.yml
cvt/: BUILD.bazel  pkg.go
db/: BUILD.bazel  pkg.go  pkg_test.go  scan.go
dbq/: BUILD.bazel  asserts.go  pkg.go  pkg_test.go
dbt/: BUILD.bazel  pkg.go  pkg_test.go
test/: BUILD.bazel  main_test.go
vcd/: BUILD.bazel  lexer.go  lexer_test.go  parser.go  parser_test.go  parser_wild_test.go  pkg.go  pkg_test.go  var_t.go  vcd_files_test.go
vcd/files/: BUILD.bazel  vcd_files_test.go
vcd/files/samples/: 18.2.4_02.vcd  BUILD.bazel
vcd/samples/: 18.2.4_01.vcd  BUILD.bazel  first.vcd
vcd/wild/: BUILD.bazel  parser_wild_test.go
