load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

# bazel run //:gazelle
# gazelle:prefix github.com/filmil/go-vcd-parser
gazelle(name = "gazelle")

# bazel run //:buildifier
buildifier(
    name = "buildifier",
)

# bazel run //:gazelle-update-repos
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
