module(
    name = "go-vcd-parser",
    version = "0.0",
)

bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")

# Go SDK

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_alecthomas_participle",
    "com_github_alecthomas_participle_v2",
    "org_golang_x_text",
    "com_github_davecgh_go_spew",
)
