load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dbq",
    srcs = ["pkg.go"],
    importpath = "github.com/filmil/go-vcd-parser/dbq",
    visibility = ["//visibility:public"],
    deps = ["//db"],
)

go_test(
    name = "dbq_test",
    srcs = ["pkg_test.go"],
    embed = [":dbq"],
    deps = [
        "//db",
        "//dbt",
        "//vcd",
        "@com_github_davecgh_go_spew//spew",
    ],
)
