load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//:macros.bzl", "vcd_go_test")

go_library(
    name = "go_default_library",
    srcs = ["pkg.go"],
    importpath = "github.com/filmil/go-vcd-parser/dbq",
    visibility = ["//visibility:public"],
    deps = [
        "//db",
        "@com_github_davecgh_go_spew//spew",
        "@com_github_golang_glog//:glog",
    ],
)

vcd_go_test(
    name = "dbq_test",
    size = "small",
    srcs = ["pkg_test.go"],
    embed = [":go_default_library"],
    vcd_file = "//vcd/files/samples:tb_example",
    deps = [
        "//db",
        "//dbt",
        "//vcd",
        "@com_github_davecgh_go_spew//spew",
    ],
)
