load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vcd",
    srcs = [
        "lexer.go",
        "parser.go",
        "var_t.go",
    ],
    importpath = "github.com/filmil/go-vcd-parser/vcd",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_alecthomas_participle//:participle",
        "@com_github_alecthomas_participle_v2//:participle",
        "@com_github_alecthomas_participle_v2//lexer",
        "@org_golang_x_text//cases",
        "@org_golang_x_text//language",
    ],
)

go_test(
    name = "vcd_test",
    size = "small",
    srcs = [
        "lexer_test.go",
        "parser_test.go",
    ],
    embed = [":vcd"],
    deps = ["@com_github_davecgh_go_spew//spew"],
)

go_test(
    name = "parser_wild_test",
    size = "small",
    srcs = ["parser_wild_test.go"],
    embed = [":vcd"],
)

go_test(
    name = "vcd_files_test",
    size = "medium",
    srcs = ["vcd_files_test.go"],
    data = [
        "//vcd/samples",
    ],
    embed = [":vcd"],
    rundir = "vcd",
)
